Notification overhaul + cleared remaining misc deprecations, stabilise build errors, and implement Android 14 compatible repeating alerts. Key changes included: • Notification System: Overhauled repeating transaction alerts to be compatible with Android 13/14. Added Notification Channels, runtime permission requests, and transitioned to robust AlarmManager scheduling using ID-based intents to prevent background crashes. • Deprecation Cleanup: Resolved various API deprecations including PreferenceManager, startActivityForResult, and legacy BitmapFactory options.