@@ -1188,7 +1188,7 @@ public class AccountClass extends PocketMoneyRecordClass implements Serializable
                 case "overdraftAccount":
                     Class<?> c = getClass();
                     try {
-                        c.getDeclaredField(localName).set(this, URLDecoder.decode(this.currentElementValue, StandardCharsets.UTF_8));
+                        c.getDeclaredField(localName).set(this, URLDecoder.decode(this.currentElementValue, StandardCharsets.UTF_8.name()));
                     } catch (Exception e2) {
                         Log.i(SMMoney.TAG, "Invalid tag parsing " + c.getName() + " xml [" + localName + "]");
                     }
