@@ -313,7 +313,11 @@ public class ClassNameClass extends PocketMoneyRecordClass {
                 setDeleted(z);
                 break;
             case "class":
-                setClassName(URLDecoder.decode(this.currentElementValue, StandardCharsets.UTF_8));
+                try {
+                    setClassName(URLDecoder.decode(this.currentElementValue, StandardCharsets.UTF_8.name()));
+                } catch (UnsupportedEncodingException e) {
+                    Log.e(SMMoney.TAG, "Error decoding XML", e);
+                }
                 break;
             case "serverID":
                 setServerID(this.currentElementValue);
