@@ -937,13 +937,25 @@ public class FilterClass extends PocketMoneyRecordClass implements Serializable 
                 setCleared(Integer.parseInt(this.currentElementValue));
                 break;
             case "account":
-                setAccount(URLDecoder.decode(this.currentElementValue, StandardCharsets.UTF_8));
+                try {
+                    setAccount(URLDecoder.decode(this.currentElementValue, StandardCharsets.UTF_8.name()));
+                } catch (UnsupportedEncodingException e) {
+                    Log.e(SMMoney.TAG, "Error decoding XML", e);
+                }
                 break;
             case "categoryID":
-                setCategory(URLDecoder.decode(this.currentElementValue, StandardCharsets.UTF_8));
+                try {
+                    setCategory(URLDecoder.decode(this.currentElementValue, StandardCharsets.UTF_8.name()));
+                } catch (UnsupportedEncodingException e) {
+                    Log.e(SMMoney.TAG, "Error decoding XML", e);
+                }
                 break;
             case "classID":
-                setClassName(URLDecoder.decode(this.currentElementValue, StandardCharsets.UTF_8));
+                try {
+                    setClassName(URLDecoder.decode(this.currentElementValue, StandardCharsets.UTF_8.name()));
+                } catch (UnsupportedEncodingException e) {
+                    Log.e(SMMoney.TAG, "Error decoding XML", e);
+                }
                 break;
             case "serverID":
                 setServerID(this.currentElementValue);
@@ -955,7 +967,7 @@ public class FilterClass extends PocketMoneyRecordClass implements Serializable 
             case "filterName":
                 Class<?> c = getClass();
                 try {
-                    c.getDeclaredField(localName).set(this, URLDecoder.decode(this.currentElementValue, StandardCharsets.UTF_8));
+                    c.getDeclaredField(localName).set(this, URLDecoder.decode(this.currentElementValue, StandardCharsets.UTF_8.name()));
                 } catch (Exception e) {
                     Log.i(SMMoney.TAG, "Invalid tag parsing " + c.getName() + " xml[" + localName + "]");
                 }
